# ACE-Step-1.5

./: .env.example  .gitignore  README.md  cli.py  pyproject.toml  requirements-rocm-linux.txt  requirements-rocm.txt  requirements-xpu.txt  requirements.txt  start_api_server.bat  start_api_server.sh  start_api_server_macos.sh  start_api_server_rocm.bat  start_gradio_ui.bat  start_gradio_ui.sh  start_gradio_ui_macos.sh  start_gradio_ui_rocm.bat
.github/workflows/: codeql.yml
acestep/: acestep_v15_pipeline.py  api_server.py  audio_utils.py  audio_utils_uuid_test.py  constants.py  debug_utils.py  dit_alignment_score.py  gpu_config.py  handler.py  inference.py  llm_inference.py  model_downloader.py  openrouter_adapter.py  openrouter_models.py  test_time_scaling.py
acestep/gradio_ui/: api_routes.py
acestep/mlx_dit/: __init__.py  convert.py  generate.py  model.py
acestep/third_parts/nano-vllm/: pyproject.toml
acestep/third_parts/nano-vllm/nanovllm/: config.py
acestep/third_parts/nano-vllm/nanovllm/engine/: model_runner.py  scheduler.py
acestep/training/: data_module.py  lora_utils.py  trainer.py
acestep/training_v2/: model_discovery.py
docs/en/: GPU_TROUBLESHOOTING.md  GRADIO_GUIDE.md  INSTALL.md  Openrouter_API_DOC.md
docs/ja/: GRADIO_GUIDE.md  INSTALL.md  Openrouter_API_DOC.md
docs/ko/: Openrouter_API_DOC.md
docs/zh/: GRADIO_GUIDE.md  INSTALL.md  Openrouter_API_DOC.md
examples/simple_mode/: example_01.json  example_02.json  example_03.json  example_04.json  (+6 more)
openrouter/: openrouter_api_server.py
playground/: playground_handler.py
ui/: studio.html
(+55 files in other folders)
